Update Tea Leaf Recipe such as Ingredients and Steps

--- a/recipes/tealeaf.html
+++ b/recipes/tealeaf.html
@@ -1,10 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Tea Leaf Salad</title>
 </head>
+
 <body>
-    
+    <h1>Tea Leaf Salad</h1>
+    <img src="../images/tealeaf.jpg" alt="Tea Leaf Salad" height="410" width="410">
+
+    <h2>Description</h2>
+    <p>Tea Leaf Salad (Lat Phat Tote) is one of the traditional side dish for Burmese people.</p>
+    <p>People love to eat with some tea </p>
+    <p>It is also a traditional to treat guests with tea leaf salad at home especially in some villages</p>
+
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Tea Leaf</li>
+        <li>Fried Garlic</li>
+        <li>Dried Shrimp</li>
+        <li>Garlic</li>
+        <li>Fried Bean</li>
+        <li>Fish Sauce</li>
+        <li>Tomato</li>
+        <li>Bean Oil</li>
+        <li>Chilli</li>
+    </ul>
+
+    <h2>Steps</h2>
+    <ol>
+        <li>To make the dressing, steep the tea leaves in hot water for 3 minutes. Drain well, pressing out excess
+            water.</li>
+        <li>Cool the leaves to room temperature.</li>
+        <li>In a small food processor, whirl the garlic, ginger, and salt to a minced state.</li>
+        <li>Add the tea leaves and whirl to a fine texture</li>
+        <li>Add the oil, vinegar, and fish sauce, then pulse to combine. You should have a scant ½ cup.</li>
+        <li>To assemble salad, make a bed of lettuce on a rimmed serving platter</li>
+        <li>Drizzle on the fish sauce or sprinkle on the salt</li>
+        <li>Like flower petals, arrange piles of tomatoes, chile, fried garlic, peanuts, roasted chickpeas, sunflower
+            seeds, sesame seeds, and shrimp powder.</li>
+        <li>Scrape the dressing into the center.</li>
+        <li>At the table, squirt on half of the lime wedges and toss the salad. If diners want more tartness, let them
+            add extra lime juice.
+        </li>
+    </ol>
 </body>
+
 </html>
