--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href = "./recipes/chicken_curry.html">Chicken Curry</a></li>
-        <li><a href = "./reciepes/tealeaf.html">Tea Leaf Salad</a></li>
+        <li><a href = "./recipes/tealeaf.html">Tea Leaf Salad</a></li>
     </ul>
 </body>
 
