--- a/recipes/tealeaf.html
+++ b/recipes/tealeaf.html
@@ -26,6 +26,8 @@
         <li>Tomato</li>
         <li>Bean Oil</li>
         <li>Chilli</li>
+        <li>Lime</li>
+        
     </ul>
 
     <h2>Steps</h2>
