Update README.md and added 1 image

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <ul>
         <li><a href = "./recipes/chicken_curry.html">Chicken Curry</a></li>
         <li><a href = "./recipes/tealeaf.html">Tea Leaf Salad</a></li>
+        <li><a href = "./recipes/monhinga.html">Monhinga</a></li>
     </ul>
 </body>
 
